@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-11T01:05:05Z",
+  "timestamp" : "2022-07-11T08:25:27Z",
   "count_outdated" : 383,
   "uniques_outdated" : 208,
   "count" : 414,
-  "uniques" : 224,
+  "uniques" : 225,
   "clones" : [
     {
       "timestamp": "2022-06-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
